# ibus-rs

./: Cargo.toml  Gir.toml
src/: lib.rs
src/auto/: bus.rs  component.rs  engine.rs  engine_desc.rs  enums.rs  factory.rs  functions.rs  lookup_table.rs  mod.rs  text.rs
