[package]
name = "ibus"
version = "0.1.0"
authors = ["Mick Sayson <mick@sayson.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibus-sys = { git = "https://github.com/sphaerophoria/ibus-sys" }
glib = "0.10.1"
glib-sys = "0.10.0"
gobject-sys = "0.10.0"
libc = "0.2.74"
gio = "0.9.0"
once_cell = "1.4.0"
